# gtsam

./: gtsam.h  gtsampy.h
examples/: SolverComparer.cpp
gtsam/geometry/: triangulation.h
gtsam/inference/: BayesTree-inst.h  BayesTree.h
gtsam/linear/: HessianFactor.cpp  IterativeSolver.h  JacobianFactor.cpp  NoiseModel.h  SubgraphSolver.h  VectorValues.h
gtsam/nonlinear/: DoglegOptimizer.h  NonlinearOptimizerParams.h  utilities.h
gtsam/slam/: SmartProjectionFactor.h  dataset.cpp  dataset.h
gtsam_unstable/geometry/tests/: testSimilarity3.cpp
gtsam_unstable/nonlinear/: FixedLagSmoother.h
wrap/: CMakeLists.txt  Module.cpp
wrap/python/: pybind_wrapper.py
wrap/tests/expected/: geometry_wrapper.cpp
wrap/tests/expected-matlab/: geometry_wrapper.cpp
wrap/tests/expected2/: geometry_wrapper.cpp
wrap/tests/expected_namespaces/: testNamespaces_wrapper.cpp
